# python-sexy

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  gitpush  patch-stamp
debian/: changelog  control  copyright  rules  watch
debian/python-sexy/DEBIAN/: control  md5sums
debian/python-sexy/usr/share/doc/python-sexy/: copyright
m4/.svn/: entries
sexy/: Makefile.am  Makefile.in  gen-defs.sh  sexy.override  sexymodule.c
